changes in linking layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="lightgreen">#7fffd4</color>
     <color name="lightgray">#cdc9c9</color>
     <color name="lightblack">#696969</color>
-
+    <color name="lightblue">#00ffff</color>
 
 
 
