--- a/app/src/main/res/layout/activity_link_to_others.xml
+++ b/app/src/main/res/layout/activity_link_to_others.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".link_to_others">
+    tools:context=".Login.login">
 
 
     <TextView
