--- a/app/src/main/res/layout/activity_paymentsuccessfull.xml
+++ b/app/src/main/res/layout/activity_paymentsuccessfull.xml
@@ -24,8 +24,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat"
         android:text="Payment Successfull"
-        android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textColor="@color/neon_blue"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
