--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="lightgray">#cdc9c9</color>
     <color name="lightblack">#696969</color>
     <color name="lightblue">#00ffff</color>
+    <color name="neon_blue">#6FECBA</color>
 
 
 
