--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,36 +10,35 @@
 
 
     <ImageView
-        android:id="@+id/logo"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:src="@drawable/dc"
-        android:layout_marginBottom="40dp"
-        android:scaleType="centerCrop"
-        />
+    android:id="@+id/logo"
+    android:layout_width="90dp"
+    android:layout_height="90dp"
+    android:src="@drawable/dc"
+    android:layout_marginBottom="40dp"
+    android:scaleType="centerCrop"
+
+    />
 
 
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_height="wrap_content"
         android:background="@drawable/squareblue"
+        android:drawableLeft="@drawable/email"
+        android:drawablePadding="20dp"
+        android:fontFamily="@font/montserrat"
         android:hint="Email"
+        android:paddingLeft="10dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:textStyle="bold"
-        android:layout_margin="20dp"
-        android:fontFamily="@font/montserrat"
         android:textColor="@color/white"
         android:textColorHint="@color/gray"
         android:textSize="16sp"
-        android:drawableLeft="@drawable/email"
-        android:drawablePadding="20dp"
-        />
-
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/password"
