--- a/app/src/main/res/drawable/roundblue.xml
+++ b/app/src/main/res/drawable/roundblue.xml
@@ -3,8 +3,8 @@
     <corners android:radius="50dp"/>
 
     <stroke
-        android:width="2dp"
-        android:color="@color/blue"
+        android:width="3dp"
+        android:color="#6B04FF"
         />
 
 </shape>
