--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,9 @@
     <color name="lightblack">#696969</color>
     <color name="lightblue">#00ffff</color>
     <color name="neon_blue">#6FECBA</color>
+    <color name="off_white">#E8FFFFFF</color>
+    <color name="little_blue">#F3F6FA</color>
+    <color name="skyblue">#03A9F4</color>
 
 
 
