--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
 
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/edemailsignin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -41,7 +41,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/edpasswordsignin"
         android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -69,7 +69,7 @@
         android:layout_margin="20dp">
 
         <Button
-            android:id="@+id/loginButton"
+            android:id="@+id/btnsignin"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/roundgbluebutton"
@@ -218,7 +218,7 @@
             android:fontFamily="@font/montserrat"/>
 
         <TextView
-            android:id="@+id/signup"
+            android:id="@+id/noaccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign Up"
