--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -22,156 +22,172 @@
 
 
     <LinearLayout
+        android:id="@+id/edpassword"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="center"
-        >
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:src="@drawable/dc"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="40dp"
-            />
+            android:src="@drawable/dc" />
 
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/edemailsignin"
             android:layout_width="match_parent"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/squareblue"
-            android:hint="Email"
-            android:ems="10"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:textStyle="bold"
             android:layout_margin="20dp"
-            android:fontFamily="@font/montserrat"
-            android:textColor="@color/white"
-            android:textColorHint="@color/gray"
-            android:textSize="16sp"
-            android:inputType="textEmailAddress"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/squareblue"
             android:drawableLeft="@drawable/email"
             android:drawablePadding="20dp"
-            />
+            android:ems="10"
+            android:fontFamily="@font/montserrat"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/gray"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/edusername"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/squareblue"
+            android:drawableLeft="@drawable/ic_username"
+            android:drawablePadding="20dp"
+            android:drawableTint="@color/white"
+            android:ems="10"
+            android:fontFamily="@font/montserrat"
+            android:hint="UserName"
+            android:inputType="text"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/gray"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/edpasswordsignin"
             android:layout_width="match_parent"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/squareblue"
-            android:hint="Passsword"
-            android:ems="10"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:textStyle="bold"
-            android:fontFamily="@font/montserrat"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/gray"
             android:drawableLeft="@drawable/lock"
             android:drawablePadding="20dp"
+            android:ems="10"
+            android:fontFamily="@font/montserrat"
+            android:hint="Passsword"
             android:inputType="textPassword"
-            android:layout_marginBottom="20dp"/>
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/gray"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
 
         <EditText
-            android:id="@+id/reference"
+            android:id="@+id/edcpassword"
             android:layout_width="match_parent"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/squareblue"
-            android:hint="Reference (Optional)"
+            android:drawableLeft="@drawable/lock"
+            android:drawablePadding="20dp"
             android:ems="10"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:fontFamily="@font/montserrat"
+            android:hint="Confirm Password"
+            android:inputType="textPassword"
             android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="10dp"
             android:textColor="@color/white"
             android:textColorHint="@color/gray"
-            android:paddingRight="20dp"
-            android:textStyle="bold"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/montserrat"
             android:textSize="16sp"
-            android:drawableLeft="@drawable/refer"
-            android:inputType="text"
-            android:drawablePadding="20dp"
+            android:textStyle="bold"
 
             />
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <CheckBox
                 android:id="@+id/checkbox"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
-                app:buttonTint="@color/white"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                app:buttonTint="@color/white" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="I agree to all statements included in"
-                android:fontFamily="@font/montserrat"
-                android:textColor="@color/white"
-                android:textSize="12sp"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="5"
-                />
+                android:fontFamily="@font/montserrat"
+                android:text="I agree to all statements included in"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/terms"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Terms"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
                 android:fontFamily="@font/montserrat"
+                android:text="Terms"
                 android:textColor="@color/blue"
                 android:textSize="12sp"
-                android:layout_marginLeft="5dp"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
 
-
-
         <Button
-            android:id="@+id/signUp"
+            android:id="@+id/btnSignup"
             android:layout_width="match_parent"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="40dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/roundgbluebutton"
             android:fontFamily="@font/montserrat"
+            android:padding="10dp"
             android:text="Continue"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:padding="10dp"
-            />
+            android:textStyle="bold" />
 
     </LinearLayout>
 
