--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -38,34 +38,11 @@
 
 
         <EditText
-            android:id="@+id/edemailsignin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/squareblue"
-            android:drawableLeft="@drawable/email"
-            android:drawablePadding="20dp"
-            android:ems="10"
-            android:fontFamily="@font/montserrat"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/gray"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <EditText
             android:id="@+id/edusername"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
             android:background="@drawable/squareblue"
             android:drawableLeft="@drawable/ic_username"
             android:drawablePadding="20dp"
@@ -84,7 +61,33 @@
 
 
         <EditText
-            android:id="@+id/edpasswordsignin"
+            android:id="@+id/edemailregister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/squareblue"
+            android:drawableLeft="@drawable/email"
+            android:drawablePadding="20dp"
+            android:ems="10"
+            android:fontFamily="@font/montserrat"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/gray"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+
+
+
+        <EditText
+            android:id="@+id/edpasswordregister"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
@@ -106,30 +109,7 @@
             android:textStyle="bold" />
 
 
-        <EditText
-            android:id="@+id/edcpassword"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/squareblue"
-            android:drawableLeft="@drawable/lock"
-            android:drawablePadding="20dp"
-            android:ems="10"
-            android:fontFamily="@font/montserrat"
-            android:hint="Confirm Password"
-            android:inputType="textPassword"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingRight="20dp"
-            android:paddingBottom="10dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/gray"
-            android:textSize="16sp"
-            android:textStyle="bold"
 
-            />
 
 
         <LinearLayout
@@ -188,6 +168,15 @@
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Already Registered, Login Here"
+            android:gravity="center_horizontal"
+            android:textColor="@color/white"
+            android:id="@+id/loginLink"
+            />
 
     </LinearLayout>
 
