--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -28,6 +28,7 @@
                 android:hint="Name"
                 android:paddingLeft="5dp"
                 android:textColorHint="@color/white"
+                android:textColor="@color/white"
 
 
 
@@ -47,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Email"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/email"
                 />
@@ -63,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Fixed Income"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/fixedIncome"
                 />
@@ -81,6 +82,7 @@
                 android:textColorHint="@color/white"
                 android:hint="Other Income"
 
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/otherIncome"
                 />
@@ -92,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Median Income"
-
+                android:textColor="@color/white"
 
                 android:paddingLeft="5dp"
                 android:textColorHint="@color/white"
@@ -109,7 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Total Expences"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
 
                 android:paddingLeft="5dp"
@@ -126,7 +128,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Saving Income"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
 
                 android:paddingLeft="5dp"
@@ -146,7 +148,7 @@
                 android:hint="Age"
 
                 android:layout_weight="1"
-
+                android:textColor="@color/white"
                 android:paddingLeft="5dp"
                 android:textColorHint="@color/white"
                 android:id="@+id/age"
@@ -161,7 +163,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Retirement Age"
-
+                android:textColor="@color/white"
                 android:paddingLeft="5dp"
                 android:textColorHint="@color/white"
 
@@ -179,7 +181,7 @@
                 android:hint="Asset Class"
                 android:textColorHint="@color/white"
                 android:paddingLeft="5dp"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/assetclass"
                 />
@@ -199,7 +201,7 @@
                 android:paddingLeft="5dp"
                 android:hint="Return"
                 android:textColorHint="@color/white"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/Return"
 
@@ -219,7 +221,7 @@
                 android:layout_height="match_parent"
                 android:hint="Risk"
                 android:textColorHint="@color/white"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/risk"
                 android:paddingLeft="5dp"
@@ -235,7 +237,7 @@
                 android:hint="Time"
                 android:paddingLeft="5dp"
                 android:textColorHint="@color/white"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/Time"
                 />
@@ -252,7 +254,7 @@
                 android:layout_height="match_parent"
                 android:hint="Financial Risk"
                 android:textColorHint="@color/white"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/Financial_Risk"
                 />
@@ -268,7 +270,7 @@
                 android:layout_height="match_parent"
                 android:hint="Standard"
                 android:textColorHint="@color/white"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/standard"
                 />
@@ -283,7 +285,7 @@
                 android:paddingLeft="5dp"
                 android:hint="Risk Willingness"
                 android:textColorHint="@color/white"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/RiskWillingness"
                 />
@@ -298,7 +300,7 @@
                 android:hint="Liquidity"
                 android:paddingLeft="5dp"
                 android:textColorHint="@color/white"
-
+                android:textColor="@color/white"
                 android:layout_weight="1"
                 android:id="@+id/Liquidity"
                 />
