--- a/app/src/main/res/layout/activity_paymentsuccessfull.xml
+++ b/app/src/main/res/layout/activity_paymentsuccessfull.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.304"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingClass,MissingConstraints" />
 
     <TextView
         android:id="@+id/textView4"
