--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="off_white">#E8FFFFFF</color>
     <color name="little_blue">#F3F6FA</color>
     <color name="skyblue">#03A9F4</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="dimGray">#696969</color>
 
 
 
