--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,12 +8,17 @@
 
 
     <color name="blue">#6200EE</color>
-    <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
     <color name="green">#5CD183</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FC2C063C</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#F5040000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="lightgreen">#0FED73</color>
+    <color name="dull_black">#95000000</color>
+    <color name="dull_white">#B4FFFFFF</color>
 
-
-    <color name="lightgreen">#7fffd4</color>
     <color name="lightgray">#cdc9c9</color>
     <color name="lightblack">#696969</color>
     <color name="lightblue">#00ffff</color>
