--- a/app/src/main/res/layout/activity_autopilot_white.xml
+++ b/app/src/main/res/layout/activity_autopilot_white.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -5,22 +6,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".Login.login">
+    tools:context=".autopilot_white">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ALL FINANCIAL SOLUTIONS"
+        android:text="PUT SAVINGS ON"
         android:textSize="40dp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textAlignment="center"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"></TextView>
+        android:layout_marginBottom="10dp"></TextView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="UNDER ONE ROOF"
+        android:text="AUTOPILOT"
         android:textSize="40dp"
         android:textColor="@color/colorAccent"
         android:textStyle="bold"
@@ -30,19 +31,18 @@
 
     <ImageView
         android:layout_width="596dp"
-        android:layout_height="233dp"
+        android:layout_height="312dp"
         android:layout_gravity="center"
-        android:src="@drawable/whitehousedc"
+        android:src="@drawable/auto"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-42dp"
-        tools:layout_editor_absoluteY="-229dp" />
+        tools:layout_editor_absoluteX="-42dp"></ImageView>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Get all your Finacial under one \tapp without the hassle of juggling between different apps.Track your net worth with extreme ease"
-        android:textSize="20sp"
-        android:textColor="@color/gray"
+        android:text="MacBook? Bali trip with gang ? Derive makes it happen. We'll set your extra money aside automatically. What's more? you can share jars and save together with friends and family!"
+        android:textColor="@color/lightblack"
+        android:textSize="19dp"
         android:textStyle="bold"
         android:textAlignment="center"
         android:layout_marginTop="15dp"
