--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -26,7 +26,7 @@
             app:layout_constraintVertical_bias="0.092" />
 
         <Button
-            android:id="@+id/sign"
+            android:id="@+id/registerLink"
             android:layout_width="160dp"
             android:layout_height="50dp"
             android:layout_alignParentStart="true"
@@ -87,6 +87,7 @@
             tools:ignore="MissingConstraints">
 
             <EditText
+                android:id="@+id/edemailsignin"
                 android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="20dp"
@@ -100,6 +101,7 @@
                 android:textSize="18sp" />
 
             <EditText
+                android:id="@+id/edpasswordsignin"
                 android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="20dp"
@@ -124,6 +126,7 @@
                 android:textStyle="bold" />
 
             <Button
+                android:id="@+id/btnsignin"
                 android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="20dp"
