--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -28,7 +28,7 @@
             tools:ignore="MissingConstraints" />
 
         <Button
-            android:id="@+id/sign"
+            android:id="@+id/registerLink"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -49,7 +49,7 @@
             tools:ignore="MissingConstraints" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/loginLink"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -73,7 +73,7 @@
             android:id="@+id/layout"
             android:layout_width="320dp"
             android:layout_height="235dp"
-            android:layout_alignBottom="@+id/sign"
+            android:layout_alignBottom="@+id/registerLink"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:background="#2C2E2E"
@@ -160,7 +160,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button3"
+            app:layout_constraintTop_toBottomOf="@+id/button2"
             app:layout_constraintVertical_bias="0.846" />
 
         <TextView
