--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -6,10 +6,15 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     tools:context=".PaymentsActivity">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/imageView4"
