--- a/app/src/main/res/drawable/track.xml
+++ b/app/src/main/res/drawable/track.xml
@@ -4,8 +4,7 @@
     <shape android:shape="rectangle">
         <solid android:color="#34c759"/>
         <corners android:radius="100dp"/>
-        <stroke android:width="1dp"
-            android:color="8c8c8c"/>
+        <stroke android:width="1dp" />
         <size android:height="20dp"/>
     </shape>
 </item>
@@ -13,8 +12,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
             <corners android:radius="100dp"/>
-            <stroke android:width="1dp"
-                android:color="8c8c8c"/>
+            <stroke android:width="1dp" />
             <size android:height="20dp"/>
         </shape>
     </item>
