--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -49,7 +49,7 @@
             tools:ignore="MissingConstraints" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/loginLink"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -72,7 +72,7 @@
         <LinearLayout
             android:id="@+id/layout"
             android:layout_width="320dp"
-            android:layout_height="235dp"
+            android:layout_height="350dp"
             android:layout_alignBottom="@+id/sign"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
@@ -87,6 +87,21 @@
             tools:ignore="MissingConstraints">
 
             <EditText
+                android:id="@+id/etName"
+                android:layout_width="280dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="75dp"
+                android:background="@drawable/curvedbutton"
+                android:hint="Name"
+                android:paddingLeft="15dp"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/white"
+                android:textColorHint="#D8CACA"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/etemail"
                 android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="20dp"
@@ -94,11 +109,13 @@
                 android:background="@drawable/curvedbutton"
                 android:hint="Email"
                 android:paddingLeft="15dp"
+                android:inputType="textEmailAddress"
                 android:textColor="@color/white"
                 android:textColorHint="#D8CACA"
                 android:textSize="18sp" />
 
             <EditText
+                android:id="@+id/etpassword"
                 android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="20dp"
@@ -107,12 +124,15 @@
                 android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                 android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
                 android:hint="Password"
+                android:inputType="textPassword"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:textColorHint="#D8CACA"
                 android:textSize="18sp" />
 
+
             <Button
+                android:id="@+id/register"
                 android:layout_width="280dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="20dp"
@@ -125,23 +145,23 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:gravity="center"
-            android:text="USE SOCIAL NETWORKS"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.748" />
+<!--        <TextView-->
+<!--            android:id="@+id/textView6"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:gravity="center"-->
+<!--            android:text="USE SOCIAL NETWORKS"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="20dp"-->
+<!--            android:textStyle="bold"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.748" />-->
 
         <TextView
             android:id="@+id/textView7"
