--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_height="40dp"
+        android:inputType="textPassword"
         android:background="@drawable/squareblue"
         android:hint="Password"
         android:paddingTop="10dp"
