--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -213,12 +213,11 @@
             android:layout_marginTop="7dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="50dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
-                app:civ_border_width="2dp"
-                app:civ_border_color="@color/blue"
                 android:src="@drawable/rupee"
-                />
+                app:civ_border_color="@color/blue"
+                app:civ_border_width="2dp" />
 
             <TextView
                 android:layout_width="wrap_content"
