--- a/app/src/main/res/layout/activity_scurity_black.xml
+++ b/app/src/main/res/layout/activity_scurity_black.xml
@@ -1,59 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/black"
+    android:orientation="vertical"
     tools:context=".scurity_black">
 
-  <ImageView
-  android:layout_width="596dp"
-  android:layout_height="312dp"
-  android:layout_gravity="center"
-  android:src="@drawable/phone"
-  tools:ignore="MissingConstraints"
-  tools:layout_editor_absoluteX="-42dp"></ImageView>
+    <ImageView
+        android:layout_width="597dp"
+        android:layout_height="312dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/securityimg"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-42dp"></ImageView>
 
-<TextView
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:text="DERIVE GIVES"
-android:textSize="30dp"
-android:textColor="@color/white"
-android:textStyle="bold"
-android:paddingLeft="20dp"
-android:layout_marginTop="20dp"
-    ></TextView>
-<TextView
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:paddingRight="10dp"
-android:text="SECURITY AND\nCONTROL ON THE GO!!"
-android:textSize="32dp"
-android:textColor="@color/colorAccent"
-android:textStyle="bold"
-android:paddingLeft="15dp"
-android:layout_marginBottom="20dp"></TextView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:paddingLeft="20dp"
+        android:text="DERIVE GIVES"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        android:textStyle="bold"></TextView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="10dp"
+        android:text="SECURITY AND\nCONTROL ON THE GO!!"
+        android:textColor="@color/colorAccent"
+        android:textSize="32dp"
+        android:textStyle="bold"></TextView>
 
 
-<TextView
-android:layout_width="match_parent"
-android:layout_height="117dp"
-android:layout_marginLeft="20dp"
-android:layout_marginTop="10dp"
-android:shadowRadius="10"
-android:layout_marginRight="20dp"
-android:layout_marginBottom="40dp"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="117dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="40dp"
+        android:gravity="center_horizontal"
 
-android:gravity="center_horizontal"
-android:paddingLeft="10dp"
-android:paddingRight="10dp"
-android:text="We've implement the highest standardsfor fraud protection and compliance with bank- grade secuity of 265-bit encrypotionand promise to never sell your data "
-android:textColor="@color/gray"
-android:textSize="20dp"
-android:textStyle="bold"></TextView>
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:shadowRadius="10"
+        android:text="We've implement the highest standardsfor fraud protection and compliance with bank- grade secuity of 265-bit encrypotionand promise to never sell your data "
+        android:textColor="@color/gray"
+        android:textSize="20dp"
+        android:textStyle="bold"></TextView>
 
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="101dp"
+        android:layout_height="60dp"
+        android:layout_gravity="right"
+        app:srcCompat="@drawable/chatimg" />
+
+</LinearLayout>
